CostalCloud/force-app/main/default/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>Floors_Covered__c</fullName>
        <label>Floors Covered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Footprint_Notes__c</fullName>
        <label>Footprint Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ground_Covered__c</fullName>
        <label>Ground Covered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HEPA__c</fullName>
        <label>HEPA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVAC_Sealed__c</fullName>
        <label>HVAC Sealed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headrail_Configuration__c</fullName>
        <label>Headrail Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Fraction__c</fullName>
        <label>Height: Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height_Inches__c</fullName>
        <inlineHelpText>Whole Inches Only</inlineHelpText>
        <label>Height: Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hinge_Count__c</fullName>
        <label>Hinge Count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hinge_Radius__c</fullName>
        <label>Hinge Radius</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Square</fullName>
                </value>
                <value>
                    <fullName>1/4&quot;</fullName>
                </value>
                <value>
                    <fullName>1/2&quot;</fullName>
                </value>
                <value>
                    <fullName>5/8”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hinge_Size__c</fullName>
        <label>Hinge Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3”</fullName>
                </value>
                <value>
                    <fullName>3-1/2”</fullName>
                </value>
                <value>
                    <fullName>4”</fullName>
                </value>
                <value>
                    <fullName>4-1/2”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hip_Height_Fraction__c</fullName>
        <label>Hip Height Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hip_Height_Inches__c</fullName>
        <inlineHelpText>Whole Inches Only</inlineHelpText>
        <label>Hip Height Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doors and  Windows</fullName>
                    <label>Doors and Windows</label>
                </value>
                <value>
                    <fullName>Window Treatments</fullName>
                </value>
                <value>
                    <fullName>Kitchens / Closets</fullName>
                </value>
                <value>
                    <fullName>General Construction</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Key_WOLI__c</fullName>
        <externalId>true</externalId>
        <label>Integration Key WOLI</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interior_Wall_Construction__c</fullName>
        <label>Interior Wall Construction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Down_Day_Time_needed__c</fullName>
        <label>Is Down Day/Time needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_a_Labor_Bid_being_submitted__c</fullName>
        <label>Is a Labor Bid being submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_a_Redesign_Required__c</fullName>
        <label>Is a Redesign Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_all_hardware_operational__c</fullName>
        <label>Is all hardware operational?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_all_product_on_site__c</fullName>
        <label>Is all product on site?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_all_product_on_site_and_installable__c</fullName>
        <label>Is all product on site and installable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_Product_Defective__c</fullName>
        <label>Is the Product Defective?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_Product_Incorrect__c</fullName>
        <label>Is the Product Incorrect?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_install_ready_to_be_scheduled__c</fullName>
        <label>Is the install ready to be scheduled?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_product_Damaged__c</fullName>
        <label>Is the product Damaged?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_sill_supported__c</fullName>
        <label>Is the sill supported?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labor_Description__c</fullName>
        <label>Labor/Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Results_of_Positive_Presumed__c</fullName>
        <inlineHelpText>Please note, one or more units at this residence has had Lead results of Positive or Presumed.  RRP Practices must take place during the installation for these units.  Did this unit have Lead Results of Positive or Presumed?</inlineHelpText>
        <label>Lead Results of Positive/Presumed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lift_Control_Position__c</fullName>
        <label>Lift Control Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitation_Notes__c</fullName>
        <label>Limitation Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitations__c</fullName>
        <label>Limitations?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Area_Measured__c</fullName>
        <inlineHelpText>Be specific, installation will reference the same area</inlineHelpText>
        <label>Location/Area Measured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Notes__c</fullName>
        <label>Location Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Masonry_Metal_Tile__c</fullName>
        <label>Masonry, Metal, Tile?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moulding__c</fullName>
        <label>Moulding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mount_Location__c</fullName>
        <label>Mount Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mounting_Depth_Fraction__c</fullName>
        <label>Mounting Depth: Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mounting_Depth_Inches__c</fullName>
        <inlineHelpText>Whole Inches only</inlineHelpText>
        <label>Mounting Depth: Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objects_Covered__c</fullName>
        <label>Objects Covered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optional_Labor__c</fullName>
        <label>Optional Labor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line 1</fullName>
                </value>
                <value>
                    <fullName>Line 2</fullName>
                </value>
                <value>
                    <fullName>Line 3</fullName>
                </value>
                <value>
                    <fullName>Line 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optional_Type__c</fullName>
        <label>Optional Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Demo &amp; Haul Away</fullName>
                </value>
                <value>
                    <fullName>Lead Safe Work Practice</fullName>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                </value>
                <value>
                    <fullName>Moulding</fullName>
                </value>
                <value>
                    <fullName>Panels</fullName>
                </value>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Regular Cabs</fullName>
                </value>
                <value>
                    <fullName>Tall Cabs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Vendor__c</fullName>
        <label>Other Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_10_off_ground__c</fullName>
        <label>Over 10&apos; off ground</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overhang_protection_above_door__c</fullName>
        <label>Overhang/protection above door</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0&quot;-18&quot;</fullName>
                </value>
                <value>
                    <fullName>18&quot;-36&quot;</fullName>
                </value>
                <value>
                    <fullName>36&quot;-72&quot;</fullName>
                </value>
                <value>
                    <fullName>Over 72&quot;</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panels__c</fullName>
        <label>Panels #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <label>Permit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Additional_Picture__c</fullName>
        <label>Photo: Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Caution_Tape__c</fullName>
        <label>Photo: Caution Tape</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Certs__c</fullName>
        <label>Photo: Certs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Chips_and_Debris__c</fullName>
        <label>Photo: Chips and Debris</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Cleaned_After_Reno__c</fullName>
        <label>Photo: Cleaned After Reno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Description__c</fullName>
        <label>Photo: Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Doors_Closed_E__c</fullName>
        <label>Photo: Doors Closed (E)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Doors_Closed_I__c</fullName>
        <label>Photo: Doors Closed (I)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Dry_Wipes__c</fullName>
        <label>Photo: Dry Wipes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Dust_Containment__c</fullName>
        <label>Photo: Dust Containment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Existing_Damage__c</fullName>
        <label>Photo: Existing Damage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Exterior__c</fullName>
        <label>Photo: Exterior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Floors_Covered__c</fullName>
        <label>Photo: Floors Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Ground_Covered__c</fullName>
        <label>Photo: Ground Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_HEPA__c</fullName>
        <label>Photo: HEPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_HVAC_Sealed__c</fullName>
        <label>Photo: HVAC Sealed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Interior__c</fullName>
        <label>Photo: Interior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Objects_Covered__c</fullName>
        <label>Photo: Objects Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Plastic_Anchored__c</fullName>
        <label>Photo: Plastic Anchored</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Install_Additional_Picture__c</fullName>
        <label>Photo: Post-Install Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Install_Exterior_Overview__c</fullName>
        <label>Photo: Post-Install Exterior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Install_Interior_Overview__c</fullName>
        <label>Photo: Post-Install Interior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Install_Picture_2__c</fullName>
        <label>Photo: Post-Install Picture 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Install_Picture__c</fullName>
        <label>Photo: Post-Install Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Repair_Additional_Picture__c</fullName>
        <label>Photo: Post-Repair Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Post_Repair_Overview__c</fullName>
        <label>Photo: Post-Repair Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Pre_Install_Additional_Picture__c</fullName>
        <label>Photo: Pre-Install Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Pre_Install_Exterior_Overview__c</fullName>
        <label>Photo: Pre-Install Exterior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Pre_Install_Interior_Overview__c</fullName>
        <label>Photo: Pre-Install Interior Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Pre_Repair_Additional_Picture__c</fullName>
        <label>Photo: Pre-Repair Additional Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Pre_Repair_Overview__c</fullName>
        <label>Photo: Pre-Repair Overview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Threshold__c</fullName>
        <label>Photo: Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Usable_Doors_Sealed__c</fullName>
        <label>Photo: Usable Doors Sealed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Vertical_Containment__c</fullName>
        <label>Photo: Vertical Containment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Warning_Signs__c</fullName>
        <label>Photo: Warning Signs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Waste_Contained__c</fullName>
        <label>Photo: Waste Contained</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Wet_Wipes__c</fullName>
        <label>Photo: Wet Wipes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Windows_Closed_E__c</fullName>
        <label>Photo: Windows Closed (E)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Windows_Closed_I__c</fullName>
        <label>Photo: Windows Closed (I)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Work_Area_Contained__c</fullName>
        <label>Photo: Work Area Contained</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plastic_Anchored__c</fullName>
        <label>Plastic Anchored</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_describe_in_detail_the_issue_s__c</fullName>
        <label>Please describe in detail the issue(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Install_Notes__c</fullName>
        <label>Post Install Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Repair_Notes__c</fullName>
        <label>Post Repair Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presumed_or_Positive_Lead__c</fullName>
        <label>Presumed or Positive Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Custom__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RRP_Test_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Was a RRP Test Kit completed for this unit if so select/link here</inlineHelpText>
        <label>RRP Test Kit</label>
        <referenceTo>RRP_Test_Kits__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Missing</fullName>
                </value>
                <value>
                    <fullName>Uninstallable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Additional_Charge__c</fullName>
        <label>Reason for Additional Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommend_Sill_Pan__c</fullName>
        <label>Recommend Sill Pan?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regular_Cabs__c</fullName>
        <label>Regular Cabs #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retain_Footprint__c</fullName>
        <label>Retain Footprint?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Handing_from_pictures__c</fullName>
        <inlineHelpText>Link to library, return value</inlineHelpText>
        <label>Select Handing from pictures</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shape__c</fullName>
        <label>Shape</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transom__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Elliptical</fullName>
                </value>
                <value>
                    <fullName>Eyebrow</fullName>
                </value>
                <value>
                    <fullName>Half Round</fullName>
                </value>
                <value>
                    <fullName>Rectangle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sill_Depth_Inches_Fraction__c</fullName>
        <label>Sill Depth: Inches/Fraction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1/8</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>3/8</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>5/8</fullName>
                </value>
                <value>
                    <fullName>3/4</fullName>
                </value>
                <value>
                    <fullName>7/8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>